Fix wording of question so it fits on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ p {
     font-size: 25px;
 }
 
-/*#leaf-image-container {
+#leaf-image-container {
     display: block;
     margin-left: auto;
     margin-right: auto;
